minor styling change to prevent footer overlap

--- a/public/stylesheets/dashboard.css
+++ b/public/stylesheets/dashboard.css
@@ -2,7 +2,7 @@
   display:flex;
   justify-content: space-around;
   position: relative;
-  max-height: 85%;
+  max-height: 82%;
   overflow: scroll;
 }
 
