--- a/public/stylesheets/discover.css
+++ b/public/stylesheets/discover.css
@@ -1,7 +1,7 @@
 .main-container {
   display:flex;
   flex-direction: column;
-  max-height: 80%;
+  max-height: 82%;
   overflow: scroll;
 }
 
