--- a/public/stylesheets/story.css
+++ b/public/stylesheets/story.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   width: 100%;
-  max-height: 85%;
+  max-height: 82%;
   overflow: scroll;
 }
 .back-button-container {
